tests/ui/fn/bad-main.stderr
error[E0580]: `main` function has wrong type
  --> $DIR/bad-main.rs:1:1
   |
LL | fn main(x: isize) { }
   | ^^^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected signature `fn()`
              found signature `fn(isize)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0580`.
